[package]
name = "itinera-server"
description = "HTTP API server for routing queries"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
itinera-core = { workspace = true }
itinera-graph = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
sha2 = "0.10"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
